--- a/src/application/HomeScreen.fxml
+++ b/src/application/HomeScreen.fxml
@@ -8,6 +8,8 @@
 
 <VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
    <children>
-      <Button mnemonicParsing="false" text="Button" />
+      <Button mnemonicParsing="false" text="Button 1" />
+      <Button mnemonicParsing="false" text="Button 2" />
+      <Button mnemonicParsing="false" text="Button 3" />
    </children>
 </VBox>
