--- a/src/application/HomeScreen.fxml
+++ b/src/application/HomeScreen.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button mnemonicParsing="false" text="Button 1" />
       <Button mnemonicParsing="false" text="Button 2" />
       <Button mnemonicParsing="false" text="Button 3" />
+      <Label text="Label" />
    </children>
 </VBox>
