--- a/src/application/HomeScreen.fxml
+++ b/src/application/HomeScreen.fxml
@@ -7,6 +7,6 @@
 
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CalendarController">
    <children>
-      <Button mnemonicParsing="false" onAction="#createNewCalendar" text="Create New Calendar" />
+      <Button mnemonicParsing="false" onAction="#getNewCalendar" text="Create New Calendar" />
    </children>
 </VBox>
