Added methods for changing between multiple fxml files when certain buttons are pressed.

--- a/src/application/HomeScreen.fxml
+++ b/src/application/HomeScreen.fxml
@@ -3,10 +3,16 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CalendarController">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CalendarController">
    <children>
-      <Button mnemonicParsing="false" onAction="#getNewCalendar" text="Create New Calendar" />
+      <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#changeScene" text="Change Scene" />
+            <Button mnemonicParsing="false" onAction="#getNewCalendarInfo" text="Create New Calendar" />
+            
+         </children>
+      </VBox>
    </children>
-</VBox>
+</AnchorPane>
