--- a/src/application/IndividualCalendarView.fxml
+++ b/src/application/IndividualCalendarView.fxml
@@ -5,13 +5,19 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="application.CalendarController">
+<AnchorPane prefHeight="266.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CalendarController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="215.0">
+      <VBox layoutX="91.0" prefHeight="266.0" prefWidth="588.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label prefHeight="17.0" prefWidth="238.0" text="Build Individual View" />
-            <Button mnemonicParsing="false" onAction="#switchHomeScreen" text="Button" />
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#addEvent" text="Add Event" />
+                  <DatePicker fx:id="datePickerIndividualView" />
+                  <TextField fx:id="descriptionTextFieldIndividual" prefHeight="25.0" prefWidth="294.0" />
+                  <Button mnemonicParsing="false" onAction="#switchHomeScreen" text="Home" />
+               </children>
+            </HBox>
+            <ListView fx:id="listViewIndividual" prefHeight="332.0" prefWidth="493.0" />
          </children>
       </VBox>
    </children>
