--- a/src/application/HomeScreen.fxml
+++ b/src/application/HomeScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -12,7 +13,7 @@
          <children>
             <VBox layoutX="8.0" layoutY="8.0" prefHeight="400.0" prefWidth="279.0">
                <children>
-                  <HBox>
+                  <HBox alignment="BOTTOM_LEFT" prefHeight="51.0" prefWidth="279.0">
                      <children>
                         <Button mnemonicParsing="false" onAction="#createNewCalendar" text="Create New Calendar" />
                         <TextField fx:id="newCalendarName" promptText="Enter Calendar Name" />
@@ -34,27 +35,65 @@
                      <VBox.margin>
                         <Insets bottom="80.0" left="80.0" right="80.0" top="80.0" />
                      </VBox.margin></Button>
+                  <HBox>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#deleteCalendar" text="Delete Calendar" />
+                        <ChoiceBox fx:id="deleteCalendarChoiceBox" prefWidth="150.0" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
-            <VBox prefHeight="400.0" prefWidth="90.0">
+            <VBox prefHeight="400.0" prefWidth="73.0">
                <children>
                   <HBox prefHeight="25.0" prefWidth="152.0">
                      <children>
-                        <Label text="Calendars" />
+                        <Label text="Calendars">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font></Label>
                      </children>
                   </HBox>
-                  <ListView fx:id="listViewCalendarsHome" editable="true" prefHeight="200.0" prefWidth="200.0" />
+                  <ListView fx:id="listViewCalendars" editable="true" prefHeight="200.0" prefWidth="200.0" />
                </children>
             </VBox>
-            <VBox prefHeight="400.0" prefWidth="213.0">
+            <VBox prefHeight="400.0" prefWidth="229.0">
                <children>
+                  <HBox prefHeight="25.0" prefWidth="221.0">
+                     <children>
+                        <Label alignment="BOTTOM_LEFT" text="Events in ">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Label>
+                        <Label fx:id="currentCalendarLabel" alignment="BOTTOM_LEFT">
+                           <font>
+                              <Font size="16.0" />
+                           </font></Label>
+                     </children>
+                  </HBox>
+                  <ListView fx:id="listViewEvents" editable="true" prefHeight="200.0" prefWidth="209.0" />
                   <HBox>
                      <children>
-                        <Label text="Select Calendar:  " />
+                        <Button mnemonicParsing="false" onAction="#deleteEvent" prefHeight="25.0" prefWidth="107.0" text="Delete event">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Button>
+                        <ChoiceBox fx:id="deleteEventChoiceBox" prefHeight="25.0" prefWidth="122.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#selectCalendar" text="Change Calendar" />
                         <ChoiceBox fx:id="calendarChoiceBox" prefHeight="25.0" prefWidth="122.0" />
                      </children>
                   </HBox>
-                  <ListView fx:id="listViewEventsHome" editable="true" prefHeight="200.0" prefWidth="200.0" />
                   <HBox prefHeight="14.0" prefWidth="158.0">
                      <children>
                         <Label text="Number of Events: " />
