--- a/src/application/HomeScreen.fxml
+++ b/src/application/HomeScreen.fxml
@@ -15,32 +15,55 @@
                <children>
                   <HBox alignment="BOTTOM_LEFT" prefHeight="51.0" prefWidth="279.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#createNewCalendar" text="Create New Calendar" />
-                        <TextField fx:id="newCalendarName" promptText="Enter Calendar Name" />
+                        <Button mnemonicParsing="false" onAction="#createNewCalendar" text="Create New Calendar">
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin></Button>
+                        <TextField fx:id="newCalendarName" prefHeight="25.0" prefWidth="128.0" promptText="Enter Calendar Name" />
                      </children>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="10.0" right="10.0" />
+                     </VBox.margin>
                   </HBox>
+                  <Label fx:id="errorLabel" alignment="CENTER" prefHeight="17.0" prefWidth="279.0" textFill="#f80000">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                     </VBox.margin></Label>
                   <HBox prefHeight="21.0" prefWidth="290.0">
                		  <children>
-                  		  <Button mnemonicParsing="false" onAction="#addEvent" text="Add Event" />
+                  		  <Button mnemonicParsing="false" onAction="#addEvent" prefHeight="25.0" prefWidth="94.0" text="Add Event" />
                         <VBox>
                            <children>
                       		  <TextField fx:id="descriptionTextField" prefHeight="25.0" prefWidth="207.0" promptText="Description" />
-                       		  <DatePicker fx:id="datePickerHomeView" prefHeight="25.0" prefWidth="207.0" promptText="Date" />
+                       		  <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="207.0" promptText="Date" />
                            </children>
                         </VBox>
                		    </children>
-          		  </HBox>
-                  <Label fx:id="errorLabel" textFill="#f80000" />
-                   <Button mnemonicParsing="false" onAction="#switchIndividualCalendarView" text="Individual View">
                      <VBox.margin>
-                        <Insets bottom="80.0" left="80.0" right="80.0" top="80.0" />
-                     </VBox.margin></Button>
+                        <Insets bottom="15.0" left="10.0" right="10.0" top="5.0" />
+                     </VBox.margin>
+          		  </HBox>
                   <HBox>
                      <children>
-                        <Button mnemonicParsing="false" onAction="#deleteCalendar" text="Delete Calendar" />
-                        <ChoiceBox fx:id="deleteCalendarChoiceBox" prefWidth="150.0" />
+                        <Button mnemonicParsing="false" onAction="#deleteCalendar" prefHeight="25.0" prefWidth="129.0" text="Delete Calendar" />
+                        <ChoiceBox fx:id="deleteCalendarChoiceBox" prefHeight="25.0" prefWidth="148.0" />
                      </children>
+                     <VBox.margin>
+                        <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                     </VBox.margin>
                   </HBox>
+                   <Button mnemonicParsing="false" onAction="#switchIndividualCalendarView" prefHeight="25.0" prefWidth="278.0" text="Change to IndividualView">
+                     <VBox.margin>
+                        <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                     </VBox.margin></Button>
+                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="278.0" text="Change to Comparison View">
+                     <VBox.margin>
+                        <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
             <VBox prefHeight="400.0" prefWidth="73.0">
@@ -56,7 +79,7 @@
                            </font></Label>
                      </children>
                   </HBox>
-                  <ListView fx:id="listViewCalendars" editable="true" prefHeight="200.0" prefWidth="200.0" />
+                  <ListView fx:id="listViewCalendars" editable="true" prefHeight="299.0" prefWidth="73.0" />
                </children>
             </VBox>
             <VBox prefHeight="400.0" prefWidth="229.0">
@@ -77,7 +100,7 @@
                            </font></Label>
                      </children>
                   </HBox>
-                  <ListView fx:id="listViewEvents" editable="true" prefHeight="200.0" prefWidth="209.0" />
+                  <ListView fx:id="listViewEvents" editable="true" prefHeight="299.0" prefWidth="229.0" />
                   <HBox>
                      <children>
                         <Button mnemonicParsing="false" onAction="#deleteEvent" prefHeight="25.0" prefWidth="107.0" text="Delete event">
