--- a/src/application/IndividualCalendarView.fxml
+++ b/src/application/IndividualCalendarView.fxml
@@ -1,23 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="266.0" prefWidth="588.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CalendarController">
+<AnchorPane prefHeight="400" prefWidth="600" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.IndividualViewController">
    <children>
       <VBox layoutX="91.0" prefHeight="266.0" prefWidth="588.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
+            <HBox>
+               <children>
+                  <Button mnemonicParsing="false" onAction="#selectCalendar" text="Select Calendar" />
+                  <ChoiceBox fx:id="calendarChoiceBox" prefHeight="25.0" prefWidth="82.0" />
+                  <Label fx:id="currentCalendarLabel" alignment="BASELINE_CENTER" prefHeight="25.0" prefWidth="210.0" text="Select Calendar">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+                  <Label fx:id="errorLabel" alignment="BASELINE_CENTER" prefHeight="25.0" prefWidth="201.0" textFill="RED" />
+               </children>
+            </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#addEvent" text="Add Event" />
-                  <DatePicker fx:id="datePickerIndividualView" />
-                  <TextField fx:id="descriptionTextFieldIndividual" prefHeight="25.0" prefWidth="294.0" />
-                  <Button mnemonicParsing="false" onAction="#switchHomeScreen" text="Home" />
+                  <TextField fx:id="descriptionTextField" prefHeight="25.0" prefWidth="189.0" promptText="Description" />
+                  <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="119.0" promptText="Date" />
+                  <Button mnemonicParsing="false" onAction="#deleteEvent" prefHeight="25.0" prefWidth="89.0" text="Delete Event" />
+                  <ChoiceBox fx:id="deleteEventChoiceBox" prefHeight="25.0" prefWidth="131.0" />
                </children>
             </HBox>
-            <ListView fx:id="listViewIndividual" prefHeight="332.0" prefWidth="493.0" />
+            <Button mnemonicParsing="false" onAction="#switchHomeScreen" prefHeight="25.0" prefWidth="600.0" text="Home" />
+            <ListView fx:id="listViewEvents" prefHeight="425.0" prefWidth="600.0" />
          </children>
       </VBox>
    </children>
