--- a/src/fxmlFiles/HomeScreen.fxml
+++ b/src/fxmlFiles/HomeScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CalendarController">
+<AnchorPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainViewController">
    <children>
       <HBox layoutX="8.0" layoutY="8.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -59,7 +59,7 @@
                      <VBox.margin>
                         <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                      </VBox.margin></Button>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="278.0" text="Change to Comparison View">
+                  <Button mnemonicParsing="false" onAction="#switchTypeCalendarView" prefHeight="25.0" prefWidth="260.0" text="Add Special Events">
                      <VBox.margin>
                         <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
                      </VBox.margin>
