--- a/src/fxmlFiles/HomeScreen.fxml
+++ b/src/fxmlFiles/HomeScreen.fxml
@@ -117,12 +117,7 @@
                         <ChoiceBox fx:id="calendarChoiceBox" prefHeight="25.0" prefWidth="122.0" />
                      </children>
                   </HBox>
-                  <HBox prefHeight="14.0" prefWidth="158.0">
-                     <children>
-                        <Label text="Number of Events: " />
-                        <Label fx:id="numberOfEventsLabel" text="0" />
-                     </children>
-                  </HBox>
+                  <HBox prefHeight="14.0" prefWidth="158.0" />
                </children>
             </VBox>
          </children>
